fixed the spacing between elements

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -34,7 +34,7 @@
 }
 
 .about {
-    margin-left: 5%;
+    margin-left: 2%;
 
     color: #737373;
     font-family: Inter;
@@ -62,7 +62,7 @@
 }
 
 .signup {
-    margin-left: 5%;
+    margin-left: 2%;
 
     border-radius: 4px;
     color: #F3F3F3;
